[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1",]
build-backend = "setuptools.build_meta"

[project]
name = "matplotlib-extensions"
description = "A collection of custom visuals and helper functions using matplotlib and pandas as a base."
version = "0.0.0dev"
requires-python = ">=3.12.10"
dependencies = [
    "numpy>=2.3.2",
    "tzdata>=2025.2",
    "pytz>=2025.2",
    "six>=1.17.0",
    "python-dateutil>=2.9.0.post0",
    "pandas>=2.3.2",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "fonttools>=4.59.1",
    "kiwisolver>=1.4.9",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "pyparsing>=3.2.3",
    "matplotlib>=3.10.5",
]

[tool.setuptools.packages.find]
where = ["src",]